# kaamai

./: README.md  app.py  pyproject.toml  requirements.txt
output/: report.md
src/job_research_crew/: crew.py  main.py
src/job_research_crew/config/: agents.yaml  tasks.yaml
