[project]
name = "job_research_crew"
version = "0.1.0"
description = "job_research_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.5a2",
    "litellm>=1.86.0rc1",
    "streamlit>=1.57.0",
]

[project.scripts]
job_research_crew = "job_research_crew.main:run"
run_crew = "job_research_crew.main:run"
train = "job_research_crew.main:train"
replay = "job_research_crew.main:replay"
test = "job_research_crew.main:test"
run_with_trigger = "job_research_crew.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[tool.uv]
prerelease = "allow"

